--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,4 @@
-/* Add CSS Styling */
+.odd {
+    background-color: rgb(230,0,100);
+    font-family: Verdana, DejaVu Sans, sans-serif;
+}/* Add CSS Styling */
