--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -3,7 +3,16 @@
     font-family: Verdana, DejaVu Sans, sans-serif;
 }
 
+.twenty-four {
+    font-size: 24px;
+}
+
 #second {
     color: rgb(0,100,255);
     font-size: 36px;
+}
+
+#four {
+    background-color: rgb(100,200,100);
+    font-weight: 800;
 }
