--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,39 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  font-size: 16px;
+  box-sizing: border-box;
 }
 
 .card {
-  width: 400px;
+  width: 800px;
   background: #fff;
   margin: 16px auto;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 20px, 10px, 10px, 10px;
+  padding: 15px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 10px;
+  padding: 20px, 15px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 10px;
+  padding: 15px, auto;
+  display: block;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 1px, auto, auto, 15px;
+  padding: 17px;
 }
