--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,27 +6,27 @@ body {
 }
 
 .card {
-  width: 800px;
+  width: 600px;
   background: #fff;
   margin: 16px auto;
 }
 
 .title {
   background: #e3f4ff;
-  margin: 20px, 10px, 10px, 10px;
+  margin: 20px 10px 10px 10px;
   padding: 15px;
 }
 
 .content {
   background: #e3f4ff;
   margin: 10px;
-  padding: 20px, 15px;
+  padding: 20px 15px;
 }
 
 .button-container {
   background: #e3f4ff;
   margin: 10px;
-  padding: 15px, auto;
+  padding: 15px auto;
   display: block;
 }
 
@@ -34,6 +34,6 @@ button {
   background: white;
   border: 1px solid #eee;
   display: block;
-  margin: 1px, auto, auto, 15px;
+  margin: 1px auto auto 15px;
   padding: 17px;
 }
