--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,39 +1,55 @@
+* {
+  font-size: 16px;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   background: #eee;
   font-family: sans-serif;
-  font-size: 16px;
-  box-sizing: border-box;
 }
 
 .card {
   width: 600px;
+  height: 300px; 
   background: #fff;
-  margin: 16px auto;
+  margin: 20px auto;
+  padding: 15px 10px 10px 10px;
+  display: block
 }
 
 .title {
   background: #e3f4ff;
-  margin: 20px 10px 10px 10px;
+  margin: 20px 0px 10px;
   padding: 15px;
+  display: block;
 }
 
 .content {
   background: #e3f4ff;
-  margin: 10px;
+  margin: 10px 0px;
   padding: 20px 15px;
+  font-size: 16px;
+  text-align: justify;
+  display: block;
 }
 
 .button-container {
   background: #e3f4ff;
-  margin: 10px;
-  padding: 15px auto;
+  margin: 10px 0px;
+  padding: 15px;
   display: block;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
   display: block;
-  margin: 1px auto auto 15px;
-  padding: 17px;
+  margin-top: 1px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 6px;
+  padding: 12px 20px 20px 12px;
 }
