--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -51,5 +51,5 @@ button {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 6px;
-  padding: 12px 20px 20px 12px;
+  padding: 12px 30px 12px;
 }
