--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,25 +1,35 @@
 .header  {
-  font-family: monospace;
+  font-family: 'Courier New', Courier, monospace;
   background: papayawhip;
+  align-items: center;
+  display: flex;
 }
 
 .logo {
-  font-size: 48px;
-  font-weight: 900;
+  font-size: 35px;
+  font-weight: bolder;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
 }
 
 a {
-  font-size: 22px;
+  font-size: 18px;
+  font-weight: 600;
   background: white;
-  padding: 8px;
+  padding: 5px;
+  margin: 8 px;
   /* this removes the line under the links */
   text-decoration: none;
 }
