--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -23,4 +25,37 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: grey;
+}
+
+.header {
+  display: flex;
+  padding: 20px;
+}
+
+.footer {
+  display: flex;
+  background-color: rgb(221, 219, 219);
+  padding: 10px;
+}
+
+.left-links {
+  display: flex;
+  margin: 0 auto 0 0;
+  gap: 20px;
+}
+
+.right-links {
+  display: flex;
+  margin: 0 0 0 auto;
+  gap: 20px;
 }
