--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -18,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
 }
 
 input {
@@ -37,25 +38,42 @@ a {
   color: grey;
 }
 
+.content {
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: auto 0;
+}
+
+.buttons {
+  display: flex;
+  gap: 4px;
+}
+
 .header {
   display: flex;
-  padding: 20px;
+  padding: 0px 10px;
+  font-size: 12px;
 }
 
 .footer {
   display: flex;
   background-color: rgb(221, 219, 219);
-  padding: 10px;
+  padding: 0px 10px;
+  font-size: 12px;
+  margin-top: auto;
 }
 
 .left-links {
   display: flex;
-  margin: 0 auto 0 0;
   gap: 20px;
+  margin-right: auto;
 }
 
 .right-links {
   display: flex;
-  margin: 0 0 0 auto;
   gap: 20px;
+  margin-left: auto;
 }
