--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -18,7 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
-  padding: 8px;
+  padding: 8px 16px;
 }
 
 input {
@@ -39,11 +39,11 @@ a {
 }
 
 .content {
-  display: flex; 
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 16px;
   margin: auto 0;
 }
 
@@ -54,16 +54,18 @@ a {
 
 .header {
   display: flex;
-  padding: 0px 10px;
+  padding: 16px;
   font-size: 12px;
+  justify-content: space-between;
 }
 
 .footer {
   display: flex;
   background-color: rgb(221, 219, 219);
-  padding: 0px 10px;
+  padding: 16px;
   font-size: 12px;
   margin-top: auto;
+  justify-content: space-between;
 }
 
 .left-links {
