--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -11,6 +11,10 @@ a {
   color: #ffffff;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .header {
   height: 72px;
   background: darkmagenta;
@@ -23,6 +27,9 @@ a {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
