--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -16,7 +16,6 @@ ul {
 }
 
 .header {
-  height: 72px;
   background: darkmagenta;
   color: white;
   font-weight: 900;
@@ -33,9 +32,9 @@ ul {
 }
 
 .sidebar {
-  width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
 }
 
 .card {
