--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -13,6 +13,8 @@ a {
 
 ul {
   list-style-type: none;
+  margin-block: 0;
+  padding: 0;
 }
 
 .header {
@@ -23,7 +25,7 @@ ul {
 }
 
 .footer {
-  height: 72px;
+  height: 39px;
   background: #eee;
   color: darkmagenta;
   display: flex;
@@ -35,14 +37,17 @@ ul {
   background: royalblue;
   box-sizing: border-box;
   display: flex;
+  width: 200px;
+  justify-content: flex-start;
+  padding: 16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  width: 265px;
-  height: 275px;
+  width: 255px;
+  height: 265px;
   padding: 8px;
 }
 
@@ -52,4 +57,5 @@ ul {
   justify-content: center;
   align-items: center;
   gap: 16px;
+  padding: 25px;
 }
