--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -41,6 +41,7 @@ ul {
   justify-content: flex-start;
   padding: 16px;
   min-height: 100vh;
+  flex-shrink: 0;
 }
 
 .card {
@@ -52,11 +53,15 @@ ul {
   padding: 8px;
 }
 
-.container {
+.all-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 16px;
-  padding: 25px;
+  padding: 15px;
+}
+
+.container {
+  display: flex;
 }
